tercera entrega con modificaciones

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <!--link icono pestaña-->
     <link rel="shortcut icon" href="./multimedia/Icon png.png" type="image/x-icon">
 </head>
-<body background="./multimedia/fondo.jpg" >
+<body>
     <header class="header">
         <nav class="navbar">
-            <h1 class="logo">PARADOR EL CUADRADO</h1>
+            <h1>parador el cuadrado ☐</h1>
             <label class="label-hamburguesa" for="menu-hamburguesa">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -32,14 +32,14 @@
         </ul>
     </nav>
 </header>
-    <div class="container"><h2>¿Ya probaste todo lo que tenemos para vos?</h2></div>
+    <div class="container"><h2>¿CON QUÉ TE VAS A TENTAR HOY?</h2></div>
     <div class="wrap">
         <div class="galeria">
             <div class="imagen 1"><img src="./multimedia/bondiola home.jpg" alt=""></div>
             <div class="imagen 2"><img src="./multimedia/burger 5 home.jpg" alt=""></div>
             <div class="imagen 3"><img src="./multimedia/cerdo home.jpg" alt=""></div>
             <div class="imagen 4"><img src="./multimedia/papa cheddar home.jpg" alt=""></div>
-            <div class="imagen 5"><img src="./multimedia/cuadrado home.jpg" alt=""></div>
+            <div class="imagen 5"><img src="./multimedia/cuadrado home.jpg" alt="" style="height: 360px;"></div>
             <div class="imagen 6"><img src="./multimedia/provo 1 home.jpg" alt=""></div>
             <div class="imagen 7"><img src="./multimedia/burger 6 home.jpg" alt=""></div>
             <div class="imagen 8"><img src="./multimedia/vegeta home.jpg" alt=""></div>
