--- a/pages/notas.html
+++ b/pages/notas.html
@@ -11,10 +11,10 @@
     <link rel="shortcut icon" href="../multimedia/Icon png.png" type="image/x-icon">
     <title>Parador El CUuadrado</title>
 </head>
-<body background="../multimedia/fondo.jpg">
+<body>
     <header class="header">
         <nav class="navbar">
-            <h1 class="logo">PARADOR EL CUADRADO</h1>
+            <h1 class="logo">PARADOR EL CUADRADO ☐</h1>
             <label class="label-hamburguesa" for="menu-hamburguesa">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -30,7 +30,7 @@
         </ul>
     </nav>
 </header>
-    <div class="container"><h5>Enterate de todo lo que pasa en el Parador</h5></div>
+    <div class="container"><h5>ENTERATE DE TODO LO QUE PASA EN EL PARADOR</h5></div>
     <article>
         <p class="titulos"> PARADOR EL CUADRADO: UN CLASICO</p>
         <iframe class="notas-link" src="https://elmilenio.info/2024/08/20/parador-el-cuadrado-un-clasico-de-las-sierras-que-sigue-conquistando-paladares/"width="400" height="300"  frameborder="0" style="background-color: khaki;"></iframe>
@@ -51,7 +51,7 @@
                 </a>
             </li>
             <li class="icon-elem">
-                <a href="" class="icon">
+                <a href="./nuestros-locales.html" class="icon">
                     <ion-icon name="alarm-outline"></ion-icon>
                 </a>
             </li>
