--- a/pages/carta.html
+++ b/pages/carta.html
@@ -11,10 +11,10 @@
     <link rel="shortcut icon" href="../multimedia/Icon png.png" type="image/x-icon">
     <title>Parador El Cuadrado</title>
 </head>
-<body background="../multimedia/fondo.jpg">
+<body>
     <header class="header">
         <nav class="navbar">
-            <h1 class="logo">PARADOR EL CUADRADO</h1>
+            <h1 class="logo">PARADOR EL CUADRADO ☐</h1>
             <label class="label-hamburguesa" for="menu-hamburguesa">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -32,9 +32,9 @@
 </header>
     <div class="container"><h6>NUESTRA CARTA</h6></div>
     <p class="titulos">Carta para retirar y delivery: Villa Belgrano & Villa Warcalde</p>
-    <div class="carta-local"><iframe class="carta-local" src="../multimedia/Carta para Delivery o Retiro.pdf" width="400" height="300" frameborder="0"></iframe></div>
+    <div class="carta-local"><iframe class="carta-local" src="../multimedia/Carta Delivery y Retiro.pdf" width="400" height="300" frameborder="0"></iframe></div>
     <p class="titulos">Carta Salon: Villa Belgrano & Villa Warcalde</p>
-    <div class="carta-local"><iframe class="carta-local" src="../multimedia/Carta para Salón.pdf"  width="400" height="300"frameborder="0" ></iframe></div>
+    <div class="carta-local"><iframe class="carta-local" src="../multimedia/Carta Salón.pdf"  width="400" height="300"frameborder="0" ></iframe></div>
     <p class="titulos">Carta Camino Al Cuadrado</p>
     <div class="carta-local"><iframe class="carta-local" src="../multimedia/carta cam cuadrado.pdf"width="400" height="300"  frameborder="0"></iframe></div> 
     <footer class="footer">
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li class="icon-elem">
-                <a href="" class="icon">
+                <a href="./nuestros-locales.html" class="icon">
                     <ion-icon name="alarm-outline"></ion-icon>
                 </a>
             </li>
