--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -11,10 +11,10 @@
     <link rel="shortcut icon" href="../multimedia/Icon png.png" type="image/x-icon">
     <title>Parador El Cuadrado</title>
 </head>
-<body background="../multimedia/fondo.jpg">
+<body>
     <header class="header">
         <nav class="navbar">
-            <h1 class="logo">PARADOR EL CUADRADO</h1>
+            <h1 class="logo">PARADOR EL CUADRADO ☐</h1>
             <label class="label-hamburguesa" for="menu-hamburguesa">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -52,7 +52,7 @@
                 </a>
             </li>
             <li class="icon-elem">
-                <a href="" class="icon">
+                <a href="./nuestros-locales.html" class="icon">
                     <ion-icon name="alarm-outline"></ion-icon>
                 </a>
             </li>
