--- a/pages/redes.html
+++ b/pages/redes.html
@@ -11,10 +11,10 @@
     <link rel="shortcut icon" href="../multimedia/Icon png.png" type="image/x-icon">
     <title>Parador El Cuadrado</title>
 </head>
-<body background="../multimedia/fondo.jpg">
+<body>
     <header class="header">
         <nav class="navbar">
-            <h1 class="logo">PARADOR EL CUADRADO</h1>
+            <h1 class="logo">PARADOR EL CUADRADO ☐</h1>
             <label class="label-hamburguesa" for="menu-hamburguesa">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -35,12 +35,12 @@
     </div>
 <div class="container-redes">
         <ul>
-            <p class="redes-titulo">Parador El Cuadrado CAMINO AL CUADRADO</p>
+            <p class="redes-titulos">Parador El Cuadrado CAMINO AL CUADRADO</p>
             <li class="redes-a">
                 <a href="https://instagram.com/paradorelcuadrado"><ion-icon class="icon-insta" name="logo-instagram"></ion-icon></iframe></a>
                 <a href="https:/facebook.com/paradorelcuadrado"><ion-icon class="icon-insta" name="logo-facebook"></ion-icon></a>
             </li>
-            <p class="redes-titulo">Parador El Cuadrado CORDOBA</p>
+            <p class="redes-titulos">Parador El Cuadrado CORDOBA</p>
             <li class="redes-a"><a href="https://instagram.com/paradorelcuadradocba"><ion-icon class="icon-insta" name="logo-instagram"></ion-icon></iframe></li>
         </ul>
     </div>
@@ -55,7 +55,7 @@
                 </a>
             </li>
             <li class="icon-elem">
-                <a href="" class="icon">
+                <a href="./nuestros-locales.html" class="icon">
                     <ion-icon name="alarm-outline"></ion-icon>
                 </a>
             </li>
