--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <h1>parador el cuadrado ☐</h1>
+            <h1> <img src="./multimedia/Logo png.png" alt="" style="height: 50%;" width="90%"></h1>
             <label class="label-hamburguesa" for="menu-hamburguesa">
-                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                 </svg>
             </label>
@@ -39,7 +39,7 @@
             <div class="imagen 2"><img src="./multimedia/burger 5 home.jpg" alt=""></div>
             <div class="imagen 3"><img src="./multimedia/cerdo home.jpg" alt=""></div>
             <div class="imagen 4"><img src="./multimedia/papa cheddar home.jpg" alt=""></div>
-            <div class="imagen 5"><img src="./multimedia/cuadrado home.jpg" alt="" style="height: 360px;"></div>
+            <div class="imagen 5"><img src="./multimedia/cuadrado home.jpg" alt=""></div>
             <div class="imagen 6"><img src="./multimedia/provo 1 home.jpg" alt=""></div>
             <div class="imagen 7"><img src="./multimedia/burger 6 home.jpg" alt=""></div>
             <div class="imagen 8"><img src="./multimedia/vegeta home.jpg" alt=""></div>
@@ -66,7 +66,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <a class="subir" href="#">
-            <i class="fa-solid fa-angles-up fa-shake" style="color: black;"></i>
+            <i class="fa-solid fa-angles-up" style="color: black;"></i>
         </a>
 </body>
 </html>
