--- a/pages/notas.html
+++ b/pages/notas.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <h1 class="logo">PARADOR EL CUADRADO ☐</h1>
+            <h1><img src="../multimedia/Logo png.png" alt="" style="height: 50%;" width="90%"></h1>
             <label class="label-hamburguesa" for="menu-hamburguesa">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -33,15 +33,15 @@
     <div class="container"><h5>ENTERATE DE TODO LO QUE PASA EN EL PARADOR</h5></div>
     <article>
         <p class="titulos"> PARADOR EL CUADRADO: UN CLASICO</p>
-        <iframe class="notas-link" src="https://elmilenio.info/2024/08/20/parador-el-cuadrado-un-clasico-de-las-sierras-que-sigue-conquistando-paladares/"width="400" height="300"  frameborder="0" style="background-color: khaki;"></iframe>
+        <iframe class="notas-link" src="https://elmilenio.info/2024/08/20/parador-el-cuadrado-un-clasico-de-las-sierras-que-sigue-conquistando-paladares/"width="400" height="300"  frameborder="0" ></iframe>
     </article>
     <article>
         <p class="titulos">SEMANA DEL LOMITO 2024</p>
-        <iframe class="notas-link" src="https://www.perfil.com/noticias/cordoba/cordoba-quienes-son-los-campeones-de-la-semana-del-lomito-2024.phtml"width="400" height="300"  frameborder="0" style=  "background-color: khaki;";></iframe>
+        <iframe class="notas-link" src="https://www.perfil.com/noticias/cordoba/cordoba-quienes-son-los-campeones-de-la-semana-del-lomito-2024.phtml"width="400" height="300"  frameborder="0";></iframe>
     </article>
     <article>
         <p class="titulos">PARADA OBLIGADA: Parador El Cuadrado</p>
-        <iframe class="notas-link" src="https://eldoce.tv/show/parada-obligada-parador-el-cuadrado-clasico-sierras-cordoba-turismo-gastronomia-video_113632/" width="400" height="300"frameborder="0" style="background-color: khaki; "></iframe>
+        <iframe class="notas-link" src="https://eldoce.tv/show/parada-obligada-parador-el-cuadrado-clasico-sierras-cordoba-turismo-gastronomia-video_113632/" width="400" height="300"frameborder="0"></iframe>
     </article>
     <footer class="footer">
         <ul class="social-icon">
@@ -63,7 +63,7 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <!--subir-->
     <a class="subir" href="#">
-        <i class="fa-solid fa-angles-up fa-shake" style="color: black;"></i>
+        <i class="fa-solid fa-angles-up" style="color: black;"></i>
     </a>
 </body>
 </html>
