--- a/pages/nuestros-locales.html
+++ b/pages/nuestros-locales.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <h1 class="logo">PARADOR EL CUADRADO ☐</h1>
+            <h1><img src="../multimedia/Logo png.png" alt="" style="height: 50%;" width="90%"></h1>
             <label class="label-hamburguesa" for="menu-hamburguesa">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -94,7 +94,7 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <!--subir-->
     <a class="subir" href="#">
-        <i class="fa-solid fa-angles-up fa-shake" style="color: black;"></i>
+        <i class="fa-solid fa-angles-up" style="color: black;"></i>
     </a>
 </body>
 </html>
