--- a/pages/redes.html
+++ b/pages/redes.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <h1 class="logo">PARADOR EL CUADRADO ☐</h1>
+            <h1><img src="../multimedia/Logo png.png" alt="" style="height: 50%;" width="90%"></h1>
             <label class="label-hamburguesa" for="menu-hamburguesa">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
@@ -35,12 +35,12 @@
     </div>
 <div class="container-redes">
         <ul>
-            <p class="redes-titulos">Parador El Cuadrado CAMINO AL CUADRADO</p>
+            <p class="redes-titulos">parador el cuadrado camino al cuadrado</p>
             <li class="redes-a">
                 <a href="https://instagram.com/paradorelcuadrado"><ion-icon class="icon-insta" name="logo-instagram"></ion-icon></iframe></a>
                 <a href="https:/facebook.com/paradorelcuadrado"><ion-icon class="icon-insta" name="logo-facebook"></ion-icon></a>
             </li>
-            <p class="redes-titulos">Parador El Cuadrado CORDOBA</p>
+            <p class="redes-titulos">parador el cuadrado cordoba</p>
             <li class="redes-a"><a href="https://instagram.com/paradorelcuadradocba"><ion-icon class="icon-insta" name="logo-instagram"></ion-icon></iframe></li>
         </ul>
     </div>
@@ -67,7 +67,7 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <!--boton subir-->    
 <a class="subir" href="#">
-        <i class="fa-solid fa-angles-up fa-shake" style="color: black;"></i>
+        <i class="fa-solid fa-angles-up" style="color: black;"></i>
     </a>
 </body>
 </html>
