arreglo menu hamburguesa

--- a/pages/notas.html
+++ b/pages/notas.html
@@ -32,7 +32,7 @@
 </header>
     <div class="container"><h5>ENTERATE DE TODO LO QUE PASA EN EL PARADOR</h5></div>
     <article>
-        <p class="titulos"> PARADOR EL CUADRADO: UN CLASICO</p>
+        <p class="titulos"> PARADOR EL CUADRADO: Un Clásico</p>
         <iframe class="notas-link" src="https://elmilenio.info/2024/08/20/parador-el-cuadrado-un-clasico-de-las-sierras-que-sigue-conquistando-paladares/"width="400" height="300"  frameborder="0" ></iframe>
     </article>
     <article>
