--- a/pages/nuestros-locales.html
+++ b/pages/nuestros-locales.html
@@ -57,7 +57,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3407.657299562493!2d-64.29268598952218!3d-31.340836192494734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329d8b6ea8d341%3A0x32d5bf2e2b8025d1!2sParador%20El%20Cuadrado%20V.%20Warcalde%20(Lomos%20y%20Hamburguesas)!5e0!3m2!1ses-419!2sar!4v1732544153839!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </a>
     </article>
-    <p class="titulos"> Parador El Cuadrado -Camino al Cuadrado- </p>
+    <p class="titulos"> Parador El Cuadrado Camino al Cuadrado </p>
     <article>
         <p class="info-locales">
             Teléfono: 3543 477 249📞
