--- a/pages/carta.html
+++ b/pages/carta.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <h1><img src="../multimedia/Logo png.png" alt="" href="#" style="height: 50%;" width="90%"></h1>
+            <h1><img src="../multimedia/Logo png.png" alt="" style="height: 50%;" width="90%"></h1>
             <label class="label-hamburguesa" for="menu-hamburguesa">
                 <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list-icon" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
