--- a/pages/redes.html
+++ b/pages/redes.html
@@ -35,12 +35,12 @@
     </div>
 <div class="container-redes">
         <ul>
-            <p class="redes-titulos">parador el cuadrado camino al cuadrado</p>
+            <p class="redes-titulos">Parador El Cuadrado Camino al Cuadrado</p>
             <li class="redes-a">
                 <a href="https://instagram.com/paradorelcuadrado"><ion-icon class="icon-insta" name="logo-instagram"></ion-icon></iframe></a>
                 <a href="https:/facebook.com/paradorelcuadrado"><ion-icon class="icon-insta" name="logo-facebook"></ion-icon></a>
             </li>
-            <p class="redes-titulos">parador el cuadrado cordoba</p>
+            <p class="redes-titulos">Parador El Cuadrado Córdoba</p>
             <li class="redes-a"><a href="https://instagram.com/paradorelcuadradocba"><ion-icon class="icon-insta" name="logo-instagram"></ion-icon></iframe></li>
         </ul>
     </div>
