cambio galeria x slider

--- a/index.html
+++ b/index.html
@@ -33,18 +33,28 @@
     </nav>
 </header>
     <div class="container"><h2>¿CON QUÉ TE VAS A TENTAR HOY?</h2></div>
-    <div class="wrap">
-        <div class="galeria">
-            <div class="imagen 1"><img src="./multimedia/bondiola home.jpg" alt=""></div>
-            <div class="imagen 2"><img src="./multimedia/burger 5 home.jpg" alt=""></div>
-            <div class="imagen 3"><img src="./multimedia/cerdo home.jpg" alt=""></div>
-            <div class="imagen 4"><img src="./multimedia/papa cheddar home.jpg" alt=""></div>
-            <div class="imagen 5"><img src="./multimedia/cuadrado home.jpg" alt=""></div>
-            <div class="imagen 6"><img src="./multimedia/provo 1 home.jpg" alt=""></div>
-            <div class="imagen 7"><img src="./multimedia/burger 6 home.jpg" alt=""></div>
-            <div class="imagen 8"><img src="./multimedia/vegeta home.jpg" alt=""></div>
-            <div class="imagen 9"><img src="./multimedia/burger 9 home.jpg" alt=""></div>
-            </div>
+    <div class="carousel">
+        <input type="radio" name="carousel" id="carousel-1" checked>
+        <input type="radio" name="carousel" id="carousel-2">
+        <input type="radio" name="carousel" id="carousel-3">
+        <input type="radio" name="carousel" id="carousel-4">
+        <input type="radio" name="carousel" id="carousel-5">
+
+        <div class="carousel-inner">
+            <img src="./multimedia/cuadrado 1600.jpg" alt="Slide 1">
+            <img src="./multimedia/papas 1600.jpg" alt="Slide 2">
+            <img src="./multimedia/burger 1600.jpg" alt="Slide 3">
+            <img src="./multimedia/vegeta 1600.jpg" alt="Slide 4">
+            <img src="./multimedia/provo 1600.jpg" alt="Slide 5">
+        </div>
+
+        <div class="carousel-indicators">
+            <label for="carousel-1"></label>
+            <label for="carousel-2"></label>
+            <label for="carousel-3"></label>
+            <label for="carousel-4"></label>
+            <label for="carousel-5"></label>
+        </div>
     </div>
     
     <footer class="footer">
