--- a/pages/carta.html
+++ b/pages/carta.html
@@ -36,7 +36,7 @@
     <p class="titulos">Carta Salon: Villa Belgrano & Villa Warcalde</p>
     <div class="carta-local"><iframe class="carta-local" src="../multimedia/Carta Salón.pdf"  width="500" height="400"frameborder="0" ></iframe></div>
     <p class="titulos">Carta Camino Al Cuadrado</p>
-    <div class="carta-local"><iframe class="carta-local" src="../multimedia/carta cam cuadrado.pdf"width="500" height="400"  frameborder="0"></iframe></div> 
+    <div class="carta-local"><iframe class="carta-local" src="../multimedia/Carta Parador camino al cuadrado.pdf"width="500" height="400"  frameborder="0"></iframe></div> 
     <footer class="footer">
         <ul class="social-icon">
             <li class="icon-elem">
